k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: halb-nginx
spec:
  selector:
    matchLabels:
      app: halb-nginx
  revisionHistoryLimit: 3
  replicas: 1
  template:
    metadata:
      labels:
        app: halb-nginx
    spec:
      containers:
        - name: halb-nginx
          image: ghcr.io/robalb/my-website:sha-06911eaa3661c6ad9b9bd528ab740f9b15c5ffb5
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
