k8s/deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: halb-nginx
spec:
  selector:
    matchLabels:
      app: halb-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: halb-nginx
    spec:
      containers:
      - name: halb-nginx
        image: ghcr.io/robalb/my-website:sha-b061ef2be92144988ba12cb26b5906d13da6270e
        ports:
        - containerPort: 80
