k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  halb-temp-nginx
spec:
  selector:
    app: halb-temp-nginx

  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP #optional protocol
